<resources>
	<string name="app_name">DaggerMockEspresso</string>
	<string name="action_settings">Settings</string>
</resources>
